# clean-calculator-api

./: CMakeLists.txt  main.cpp
cmake/: TESTESConfig.cmake.in
errors/: CMakeLists.txt  calculator_errors.cpp
include/: CMakeLists.txt  calculate.hpp  calculator.hpp  calculator_errors.hpp  map_of_operations.hpp  numbers_pair.hpp
src/: CMakeLists.txt  calculator.cpp  numbers_pair.cpp
tests/: CMakeLists.txt  test_calculator.cpp
utils/: CMakeLists.txt  calculate.cpp  map_of_operations.cpp
